# cratedb-academy

./: README.md  cratedb-simple.py  cratedb-simple_read_using_pandas.py  cratedb_simple_read_using_polars.py  dev.env  docker-compose.yml  import_ny_taxi_data.py  pyproject.toml  taxi_data.py
