[project]
name = "cratedb-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "connectorx>=0.4.2",
    "kaleido==0.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-cratedb>=0.41.0",
]
